Add bar functionality.

--- a/codereview/codereview.html
+++ b/codereview/codereview.html
@@ -16,6 +16,13 @@
 					</li>
 				</ul>
 			</div>
+			<div class="col-med-12" ng-controller="barCtrl">
+				<ul id="bars">
+					<li ng-repeat="bar in bars">
+						<span>{{bar.name}}</span>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<script src="path/to/angular.js"></script>
